2005-05-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline) src/gadgets.h src/save.c (save_set_all)
	src/set.c (set_bars parse_histogramstyle) src/show.c (show_histogram) 
	src/plot2d.c (get_data histogram_range_fiddling) 
	src/graphics.c (do_plot plot_bars plot_boxes): New histogram plot mode

	    set style histogram errorbars {gap <g>} {linewidth {lw}}

	Identical to 'set style histogram clustered' except that a second
	column of input data (required) is used to generate error bars at the
	top of each box belonging to the histogram.
	
	* docs/gnuplot.doc: Document the addition of a new histogram
	plot mode and associated options for 'set bars'.
	
2005-05-18  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_allzeroaxis): Fix parsing error (bug #1204444).

2005-05-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (eval_3dplots): Prevent parser from getting into an
	infinite loop when parsing 'splot with vectors' and no additional
	options (bug #1203139).

	* src/graph3d.c (do_3dplot): Show key sample for 'splot with vectors'.

2005-05-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_terminal): That last change wasn't popular.
	Instead, provide additional (but not complete) backward
	compatibility by doing an implicit "unset table" whenever the
	terminal is changed.

2005-05-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_terminal): Give up on trying to provide backward
	compatibility for the old 'set term table' command; just issue a
	warning and leave the current terminal unchanged.

2005-05-13  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (ignore_enhanced): Force a return to the default font.
	 Fixes bug #1194516.

	* term/README: Document the fact that term->set_font("") is expected
	to restore the terminal's default font. This was already true, but
	not mentioned in README.

2005-05-13  Petr Mikulik  <mikulik@physics.muni.cz>
